--- a/app/src/main/res/layout/rv_item_lounge.xml
+++ b/app/src/main/res/layout/rv_item_lounge.xml
@@ -33,18 +33,20 @@
         android:layout_marginBottom="40dp"
         >
         <TextView
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rl_lounge_main_club_name"
-            android:layout_width="131dp"
-            android:layout_height="22dp"
-            android:textSize="15sp"
-            android:textColor="#222222"
-            android:letterSpacing="-0.01"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:lineHeight="20sp"
+            android:textColor="#ff786e"
+            android:letterSpacing="-0.16"
             android:lineSpacingExtra="5sp"
             android:text="INNOVATOR CLUB"
             android:layout_marginLeft="20dp"
             android:layout_centerVertical="true"
-            android:textStyle="bold"
             />
+
         <ImageView
             android:id="@+id/btn_lounge_main_arrow_button"
             android:layout_width="30dp"
