--- a/app/src/main/res/layout/rv_item_lounge_event.xml
+++ b/app/src/main/res/layout/rv_item_lounge_event.xml
@@ -14,34 +14,39 @@
         android:background="@drawable/lounge_event"
         />
         <TextView
+            android:fontFamily="@font/noto_black"
             android:id="@+id/tv_rv_item_lounge_event_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="24sp"
             android:textColor="#ffffff"
-            android:letterSpacing="-0.01"
+            android:lineHeight="34sp"
+            android:letterSpacing="-0.24"
             android:lineSpacingExtra="10sp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="37dp"
             android:text="혁신콘서트"
-            android:textStyle="bold"
+
             />
         <TextView
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="11sp"
             android:textColor="#ffffff"
+            android:lineHeight="17sp"
             android:lineSpacingExtra="6sp"
             android:layout_centerHorizontal="true"
-            android:textStyle="bold"
             android:text="2019 / 04 / 13 (목)"
             android:layout_marginTop="82.7dp"
             />
         <TextView
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:lineHeight="17sp"
             android:textSize="11sp"
             android:textColor="#ffffff"
             android:lineSpacingExtra="6sp"
@@ -51,6 +56,7 @@
             android:layout_marginTop="102.7dp"
             />
         <TextView
+            android:fontFamily="@font/noto_bold"
             android:id="@+id/tv_rv_item_lounge_event_place"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,6 +65,7 @@
             android:lineSpacingExtra="6sp"
             android:layout_centerHorizontal="true"
             android:textStyle="bold"
+            android:lineHeight="17sp"
             android:text="서울청년창업허브"
             android:layout_marginTop="122.7dp"
             />
