--- a/app/src/main/res/layout/activity_detail_board.xml
+++ b/app/src/main/res/layout/activity_detail_board.xml
@@ -321,10 +321,11 @@
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/detail_board_reboard_recyclerview"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:background="#f9f9f9"
                     >
                 </android.support.v7.widget.RecyclerView>
+
             </LinearLayout>
         </android.support.v4.widget.NestedScrollView>
     </LinearLayout>
@@ -335,6 +336,7 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         >
+
         <android.support.v7.widget.RecyclerView
             android:id="@+id/detail_board_reboard_img_recyclerview"
             android:layout_width="match_parent"
