--- a/app/src/main/res/layout/rv_item_board.xml
+++ b/app/src/main/res/layout/rv_item_board.xml
@@ -262,7 +262,7 @@
                     android:layout_height="wrap_content"
                     android:layout_centerVertical="true"
                     android:layout_marginLeft="5dp"
-                    android:layout_toRightOf="@id/iv_item_board_like"
+                    android:layout_toRightOf="@id/iv_item_like_btn"
                     android:letterSpacing="-0.01"
                     android:lineSpacingExtra="12sp"
                     android:text="999+"
